[package]
name = "lumos"
version = "0.1.0"
authors = [ "Phodal Huang <h@phodal.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/phodal/lumos"
documentation = "https://github.com/phodal/lumos"
homepage = "https://github.com/phodal/lumos"
description = """
lumos is poc of a build-system for build-system.
"""
categories = ["text-processing", "command-line-interface", "development-tools"]
exclude = [
    ".coco/*",
    "benchmark/*",
    "fixtures/*",
    "targets/*",
    ".github/*",
    ".gitattributes",
    ".adr.json",
]



[dependencies]

[[bin]]
name = "lumos"
test = false
bench = false
